// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / Expandable FlexTable Controlled Expandable Table With Custom Row 1`] = `
.c27 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c30 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c30 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c30 > *:not(:first-child) {
  padding-top: 0;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c20 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c25 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c29 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c21 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c21,
.c21[type='button'],
.c21[type='reset'],
.c21[type='submit'] {
  -webkit-appearance: button;
}

.c21::-moz-focus-inner,
.c21[type='button']::-moz-focus-inner,
.c21[type='reset']::-moz-focus-inner,
.c21[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c21:-moz-focusring,
.c21[type='button']:-moz-focusring,
.c21[type='reset']:-moz-focusring,
.c21[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  width: inherit;
}

.c11 {
  overflow: hidden;
}

.c15:focus {
  outline: none;
}

.c28 {
  background: #FFFFFF;
}

.c2 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c10 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c10:hover {
  background: #F5F5F5;
}

.c10 > *:first-child {
  padding-left: 0;
}

.c10 > *:last-child {
  padding-right: 0;
}

.c24 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c24 > *:first-child {
  padding-left: 0;
}

.c24 > *:last-child {
  padding-right: 0;
}

.c26 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c3 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c5 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

@media (min-width:976px) {
  .c27 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c13 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c18 {
    display: none;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c9 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c14 c15"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c14 c15"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c19 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c1 c24"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                transform="rotate(-180 12 12)"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c25"
              direction="up"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c26"
    role="row"
  >
    <div
      className="c27 c28"
      role="cell"
    >
      <div
        className="c13"
      >
        <ul
          className="c29"
        />
      </div>
      <div
        className="c18"
      >
        <ul
          className="c29 c30"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Expandable FlexTable Controlled Expanded Table 1`] = `
.c27 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c30 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c30 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c30 > *:not(:first-child) {
  padding-top: 0;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c20 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c25 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c29 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c21 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c21,
.c21[type='button'],
.c21[type='reset'],
.c21[type='submit'] {
  -webkit-appearance: button;
}

.c21::-moz-focus-inner,
.c21[type='button']::-moz-focus-inner,
.c21[type='reset']::-moz-focus-inner,
.c21[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c21:-moz-focusring,
.c21[type='button']:-moz-focusring,
.c21[type='reset']:-moz-focusring,
.c21[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  width: inherit;
}

.c11 {
  overflow: hidden;
}

.c15:focus {
  outline: none;
}

.c28 {
  background: #FFFFFF;
}

.c2 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c10 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c10:hover {
  background: #F5F5F5;
}

.c10 > *:first-child {
  padding-left: 0;
}

.c10 > *:last-child {
  padding-right: 0;
}

.c24 {
  background: #FFFFFF;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid #0046FF;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c24 > *:first-child {
  padding-left: 0;
}

.c24 > *:last-child {
  padding-right: 0;
}

.c26 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c3 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c5 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

@media (min-width:976px) {
  .c27 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c13 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c18 {
    display: none;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c9 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c14 c15"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c14 c15"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c19 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c1 c24"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                transform="rotate(-180 12 12)"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c25"
              direction="up"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c26"
    role="row"
  >
    <div
      className="c27 c28"
      role="cell"
    >
      <div
        className="c13"
      >
        <ul
          className="c29"
        />
      </div>
      <div
        className="c18"
      >
        <ul
          className="c29 c30"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c1 c10"
    role="row"
  >
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c4 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c12"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c9 c11"
      role="cell"
    >
      <div
        className="c13"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c18"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c21 c15"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c23 c20"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Expandable FlexTable Expanded Table 1`] = `
.c27 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c30 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c30 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c30 > *:not(:first-child) {
  padding-top: 0;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c20 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c25 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c29 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c21 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c21,
.c21[type='button'],
.c21[type='reset'],
.c21[type='submit'] {
  -webkit-appearance: button;
}

.c21::-moz-focus-inner,
.c21[type='button']::-moz-focus-inner,
.c21[type='reset']::-moz-focus-inner,
.c21[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c21:-moz-focusring,
.c21[type='button']:-moz-focusring,
.c21[type='reset']:-moz-focusring,
.c21[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  width: inherit;
}

.c11 {
  overflow: hidden;
}

.c15:focus {
  outline: none;
}

.c28 {
  background: #FFFFFF;
}

.c2 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c10 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c10:hover {
  background: #F5F5F5;
}

.c10 > *:first-child {
  padding-left: 0;
}

.c10 > *:last-child {
  padding-right: 0;
}

.c24 {
  background: #FFFFFF;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid #0046FF;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c24 > *:first-child {
  padding-left: 0;
}

.c24 > *:last-child {
  padding-right: 0;
}

.c26 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c3 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c5 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

@media (min-width:976px) {
  .c27 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c13 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c18 {
    display: none;
  }
}

<div>
  <div
    className="c0"
    role="table"
  >
    <div
      className="c1 c2 c3"
      role="row"
    >
      <div
        className="c4 c5"
        role="columnheader"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c8"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c4 c5"
        role="columnheader"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c8"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c4 c5"
        role="columnheader"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c8"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c9 c5"
        role="columnheader"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c8"
          />
        </div>
      </div>
    </div>
    <div
      className="c1 c10"
      role="row"
    >
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c11"
        role="cell"
      >
        <div
          className="c13"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c14 c15"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c17"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c14 c15"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c19 c20"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1 c10"
      role="row"
    >
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c11"
        role="cell"
      >
        <div
          className="c13"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c23 c20"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1 c24"
      role="row"
    >
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c11"
        role="cell"
      >
        <div
          className="c13"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  transform="rotate(-180 12 12)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c18"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c23 c25"
                direction="up"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c26"
      role="row"
    >
      <div
        className="c27 c28"
        role="cell"
      >
        <div
          className="c13"
        >
          <ul
            className="c29"
          />
        </div>
        <div
          className="c18"
        >
          <ul
            className="c29 c30"
          />
        </div>
      </div>
    </div>
    <div
      className="c1 c10"
      role="row"
    >
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c11"
        role="cell"
      >
        <div
          className="c13"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c23 c20"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1 c10"
      role="row"
    >
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c4 c11"
        role="cell"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c12"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c11"
        role="cell"
      >
        <div
          className="c13"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c15"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c16"
            >
              <svg
                aria-hidden="true"
                className="c23 c20"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Expandable FlexTable Expanded Table Different Font Size On Mobile 1`] = `
.c2 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c7 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  background: #FFFFFF;
}

.c1 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c0 {
  position: relative;
}

@media (min-width:976px) {
  .c2 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c4 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1"
    role="row"
  >
    <div
      className="c2 c3"
      role="cell"
    >
      <div
        className="c4"
      >
        <ul
          className="c5"
        />
      </div>
      <div
        className="c6"
      >
        <ul
          className="c5 c7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Expandable FlexTable Only Expandable On Mobile Table 1`] = `
.c0 {
  position: relative;
}

<div
  className="c0"
  role="table"
/>
`;
